# zelda

./: .dockerignore  .editorconfig  .environ  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  README.rst  cookbook.toml  cookbook.yaml  docker-compose.yml  enforce_eol.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.certs/: localhost.crt  localhost.key
src/zelda/: settings.py  urls.py
src/zelda/armor/: admin.py  apps.py  models.py  urls.py  views.py
src/zelda/armor/data/: armor.json
src/zelda/armor/migrations/: 0001_initial.py  0002_add_armor.py
src/zelda/armor/templates/armor/: armor.html
src/zelda/branding/: apps.py
src/zelda/branding/templates/admin/: base_site.html
src/zelda/branding/templates/branding/: favicons.html
src/zelda/home/: apps.py  dashboard.py  urls.py  views.py
src/zelda/home/management/commands/: checkmigrations.py  makemigrations.py
src/zelda/home/templates/home/: home.html
src/zelda/lib/: apps.py  choices.py  date_utils.py  exceptions.py  http.py  models.py  types.py  utils.py  views.py  workers.py
src/zelda/lib/data/: timezones.py
src/zelda/lib/static/lib/css/: base.scss
src/zelda/lib/static/lib/js/: base.ts
src/zelda/lib/templates/lib/: base.html  base_footer.html  base_header.html  base_meta.html
src/zelda/registration/: admin.py  apps.py  models.py
src/zelda/registration/migrations/: 0001_initial.py  0002_user_armor.py  0003_add_default_superuser.py
src/zelda/registration/templates/registration/: login.html
src/zelda/users/: apps.py  models.py
src/zelda/users/migrations/: 0001_initial.py  0003_add_default_superuser.py
tests/: conftest.py
tests/zelda/: test_urls.py
tests/zelda/home/: test_views.py
tests/zelda/lib/: test_choices.py  test_date_utils.py  test_models.py  test_utils.py
tests/zelda/registration/: test_models.py
