[build-system]
requires = [
    "poetry_core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = ".*\\.ipynb"
target-version = [
    "py312",
]

[tool.mypy]
exclude = "/migrations/"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "zelda.settings"

[tool.ruff]
src = [
    "src",
]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
    "S105",
    "S106",
]
"**/migrations/**" = [
    "RUF001",
    "RUF012",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "django",
    "first-party",
    "tests",
]
split-on-trailing-comma = false

[tool.ruff.lint.isort.sections]
"django" = [
    "django",
]
"tests" = [
    "tests",
]

[tool.pytest.ini_options]
addopts = "-vv --reuse-db"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"
omit = [
    "src/zelda/asgi.py",
    "src/zelda/wsgi.py",
    "src/zelda/settings.py",
    "src/zelda/*/migrations/*",
    "src/zelda/lib/workers.py",
    "src/zelda/home/dashboard.py",
    "src/zelda/home/management/commands/makemigrations.py",
    "src/zelda/home/management/commands/checkmigrations.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.poetry]
name = "zelda"
version = "0.1.0"
description = "Zelda armor app"
license = "Proprietary"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

[tool.poetry.dependencies]
# python version
python = "^3.12"

# dependencies
dj-settings = "~5.0"
Django = "~5.0"
django-stubs-ext = "~5.0"
django-grappelli = "~4.0"
gunicorn = "~22.0"
joselib = "0.1.0b0"
pathurl = "~0.6"
psycopg = "~3.1"
pyOpenSSL = "~24.1"
uvicorn = "~0.29"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2"
ipdb = "^0.13"
ipython = "^8.23"
jupyterlab = "^4.1"
pipdeptree = "^2.18"
Pygments = "^2.17"
watchfiles = "^0.21.0"
Werkzeug = "^3.0"
whitenoise = "^6.6"

[tool.poetry.group.lint.dependencies]
black = "^24.4"
django-stubs = "^5.0"
mypy = "^1.9"
ruff = "^0.4"

[tool.poetry.group.test.dependencies]
factorio = "^0.4"
freezegun = "^1.4"
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-django = "^4.8"
